--- a/Hullien/Hullien/Hullien.vcxproj.filters
+++ b/Hullien/Hullien/Hullien.vcxproj.filters
@@ -123,7 +123,6 @@
     <ClCompile Include="SourceCode\SceneEvent\SceneEvents\GameOverEvent\GameOverEvent.cpp" />
     <ClCompile Include="SourceCode\SceneEvent\SceneEvents\GameClearEvent\GameClearEvent.cpp" />
     <ClCompile Include="SourceCode\SceneEvent\SceneEvents\GameStartEvent\GameStartEvent.cpp" />
-    <ClCompile Include="SourceCode\GameObject\Actor\Character\EventPlayer\EventPlayer.cpp" />
     <ClCompile Include="SourceCode\Camera\EvevtCamera\EvevtCamera.cpp" />
     <ClCompile Include="SourceCode\GameObject\MotherShipUFO\MotherShipUFO.cpp" />
     <ClCompile Include="SourceCode\Common\PeraRenderer\PeraRenderer.cpp" />
@@ -133,6 +132,11 @@
     <ClCompile Include="SourceCode\Editor\PlayerEdit\PlayerEdit.cpp" />
     <ClCompile Include="SourceCode\Editor\EditBase.cpp" />
     <ClCompile Include="SourceCode\Editor\MotherShipUFOEdit\MotherShipUFOEdit.cpp" />
+    <ClCompile Include="SourceCode\GameObject\Actor\EventCharacter\EventAlien\EventAlien_A\EventAlien_A.cpp" />
+    <ClCompile Include="SourceCode\GameObject\Actor\EventCharacter\EventAlien\EventAlien.cpp" />
+    <ClCompile Include="SourceCode\GameObject\Actor\EventCharacter\EventGirl\EventGirl.cpp" />
+    <ClCompile Include="SourceCode\GameObject\Actor\EventCharacter\EventPlayer\EventPlayer.cpp" />
+    <ClCompile Include="SourceCode\GameObject\Actor\EventCharacter\EventCharacter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\ImGui\imconfig.h" />
@@ -261,7 +265,6 @@
     <ClInclude Include="SourceCode\SceneEvent\SceneEvents\GameOverEvent\GameOverEvent.h" />
     <ClInclude Include="SourceCode\SceneEvent\SceneEvents\GameClearEvent\GameClearEvent.h" />
     <ClInclude Include="SourceCode\SceneEvent\SceneEvents\GameStartEvent\GameStartEvent.h" />
-    <ClInclude Include="SourceCode\GameObject\Actor\Character\EventPlayer\EventPlayer.h" />
     <ClInclude Include="SourceCode\Camera\EvevtCamera\EvevtCamera.h" />
     <ClInclude Include="SourceCode\GameObject\MotherShipUFO\MotherShipUFO.h" />
     <ClInclude Include="SourceCode\Common\PeraRenderer\PeraRenderer.h" />
@@ -271,5 +274,10 @@
     <ClInclude Include="SourceCode\Editor\PlayerEdit\PlayerEdit.h" />
     <ClInclude Include="SourceCode\Editor\EditBase.h" />
     <ClInclude Include="SourceCode\Editor\MotherShipUFOEdit\MotherShipUFOEdit.h" />
+    <ClInclude Include="SourceCode\GameObject\Actor\EventCharacter\EventAlien\EventAlien_A\EventAlien_A.h" />
+    <ClInclude Include="SourceCode\GameObject\Actor\EventCharacter\EventAlien\EventAlien.h" />
+    <ClInclude Include="SourceCode\GameObject\Actor\EventCharacter\EventGirl\EventGirl.h" />
+    <ClInclude Include="SourceCode\GameObject\Actor\EventCharacter\EventPlayer\EventPlayer.h" />
+    <ClInclude Include="SourceCode\GameObject\Actor\EventCharacter\EventCharacter.h" />
   </ItemGroup>
 </Project>
