--- a/Hullien/Hullien/Hullien.vcxproj.filters
+++ b/Hullien/Hullien/Hullien.vcxproj.filters
@@ -137,7 +137,8 @@
     <ClCompile Include="SourceCode\GameObject\Actor\EventCharacter\EventGirl\EventGirl.cpp" />
     <ClCompile Include="SourceCode\GameObject\Actor\EventCharacter\EventPlayer\EventPlayer.cpp" />
     <ClCompile Include="SourceCode\GameObject\Actor\EventCharacter\EventCharacter.cpp" />
-    <ClCompile Include="SourceCode\GameObject\Widget\SceneWidget\GameStartEventWidget\GameStartEventWidget.cpp" />
+    <ClCompile Include="SourceCode\GameObject\Widget\EventWidget\GameStartEventWidget\GameStartEventWidget.cpp" />
+    <ClCompile Include="SourceCode\GameObject\Widget\EventWidget\EventWidget.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\ImGui\imconfig.h" />
@@ -280,6 +281,7 @@
     <ClInclude Include="SourceCode\GameObject\Actor\EventCharacter\EventGirl\EventGirl.h" />
     <ClInclude Include="SourceCode\GameObject\Actor\EventCharacter\EventPlayer\EventPlayer.h" />
     <ClInclude Include="SourceCode\GameObject\Actor\EventCharacter\EventCharacter.h" />
-    <ClInclude Include="SourceCode\GameObject\Widget\SceneWidget\GameStartEventWidget\GameStartEventWidget.h" />
+    <ClInclude Include="SourceCode\GameObject\Widget\EventWidget\GameStartEventWidget\GameStartEventWidget.h" />
+    <ClInclude Include="SourceCode\GameObject\Widget\EventWidget\EventWidget.h" />
   </ItemGroup>
 </Project>
