--- a/Hullien/Hullien/Hullien.vcxproj
+++ b/Hullien/Hullien/Hullien.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="SourceCode\Common\Shader\TranslucentShader\TranslucentShader.cpp" />
     <ClCompile Include="SourceCode\Common\SkyDomeModel\SkyDomeModel.cpp" />
     <ClCompile Include="SourceCode\Common\Sprite\CSprite.cpp" />
+    <ClCompile Include="SourceCode\Common\Transition\Transition.cpp" />
     <ClCompile Include="SourceCode\Editor\AlienParamEdit\AlienParamEdit.cpp" />
     <ClCompile Include="SourceCode\Editor\ControllerEdit\ControllerEdit.cpp" />
     <ClCompile Include="SourceCode\Editor\EditBase.cpp" />
@@ -311,6 +312,7 @@
     <ClInclude Include="Library\ImGui\imstb_truetype.h" />
     <ClInclude Include="SourceCode\Common\Mesh\MeshStruct.h" />
     <ClInclude Include="SourceCode\Common\SkyDomeModel\SkyDomeModel.h" />
+    <ClInclude Include="SourceCode\Common\Transition\Transition.h" />
     <ClInclude Include="SourceCode\GameObject\Actor\Character\Alien\AlienParam.h" />
     <ClInclude Include="SourceCode\GameObject\Actor\Character\Alien\EditAlien\Alien_A\EditAlien_A.h" />
     <ClInclude Include="SourceCode\GameObject\Actor\Character\Alien\EditAlien\Alien_B\EditAlien_B.h" />
@@ -597,6 +599,14 @@
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">4.0</ShaderModel>
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">VS_Main</EntryPointName>
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">VS_Main</EntryPointName>
+    </FxCompile>
+    <FxCompile Include="Data\Shader\Transition.hlsl">
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">VS_Main</EntryPointName>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">VS_Main</EntryPointName>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
     </FxCompile>
     <FxCompile Include="Data\Shader\TranslucentShader.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
