--- a/Hullien/Hullien/Hullien.vcxproj.filters
+++ b/Hullien/Hullien/Hullien.vcxproj.filters
@@ -14,6 +14,7 @@
     <FxCompile Include="Data\Shader\SkyDome.hlsl" />
     <FxCompile Include="Data\Shader\Transition.hlsl" />
     <FxCompile Include="Data\Shader\Gage.hlsl" />
+    <FxCompile Include="Data\Shader\Bloom.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Library\ImGui\imgui.cpp" />
@@ -183,6 +184,7 @@
     <ClCompile Include="SourceCode\Common\Transition\Transition.cpp" />
     <ClCompile Include="SourceCode\GameObject\Widget\Switch\Switch.cpp" />
     <ClCompile Include="SourceCode\Common\Gage\Gage.cpp" />
+    <ClCompile Include="SourceCode\Common\Bloom\Bloom.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\ImGui\imconfig.h" />
@@ -375,6 +377,7 @@
     <ClInclude Include="SourceCode\Common\Transition\Transition.h" />
     <ClInclude Include="SourceCode\GameObject\Widget\Switch\Switch.h" />
     <ClInclude Include="SourceCode\Common\Gage\Gage.h" />
+    <ClInclude Include="SourceCode\Common\Bloom\Bloom.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
