--- a/Hullien/Hullien/Hullien.vcxproj
+++ b/Hullien/Hullien/Hullien.vcxproj
@@ -292,11 +292,12 @@
     <ClCompile Include="SourceCode\Scene\Scenes\Game\Game.cpp" />
     <ClCompile Include="SourceCode\Scene\Scenes\Title\Title.cpp" />
     <ClCompile Include="SourceCode\Utility\ImGuiManager\ImGuiManager.cpp" />
-    <ClCompile Include="SourceCode\Utility\KeyInput\KeyInput.cpp" />
+    <ClCompile Include="SourceCode\Utility\Input\Input.cpp" />
+    <ClCompile Include="SourceCode\Utility\Input\KeyInput\KeyInput.cpp" />
     <ClCompile Include="SourceCode\Utility\Log\MyLog.cpp" />
     <ClCompile Include="SourceCode\Utility\Mouse\Mouse.cpp" />
-    <ClCompile Include="SourceCode\Utility\XInput\XInput.cpp" />
-    <ClCompile Include="SourceCode\Utility\XInput\XinputConfig.cpp" />
+    <ClCompile Include="SourceCode\Utility\Input\XInput\XInput.cpp" />
+    <ClCompile Include="SourceCode\Utility\Input\XInput\XinputConfig.cpp" />
     <ClCompile Include="SourceCode\XAudio2\OggLoad\OggLoad.cpp" />
     <ClCompile Include="SourceCode\XAudio2\SoundManager.cpp" />
     <ClCompile Include="SourceCode\XAudio2\XAudio2Master\XAudio2MasterVoice.cpp" />
@@ -473,7 +474,8 @@
     <ClInclude Include="SourceCode\Global.h" />
     <ClInclude Include="SourceCode\Main\Main.h" />
     <ClInclude Include="SourceCode\Utility\ImGuiManager\ImGuiManager.h" />
-    <ClInclude Include="SourceCode\Utility\KeyInput\KeyInput.h" />
+    <ClInclude Include="SourceCode\Utility\Input\Input.h" />
+    <ClInclude Include="SourceCode\Utility\Input\KeyInput\KeyInput.h" />
     <ClInclude Include="SourceCode\Utility\Log\MyLog.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClInclude>
@@ -488,8 +490,8 @@
     <ClInclude Include="SourceCode\Scene\Scenes\Game\Game.h" />
     <ClInclude Include="SourceCode\Scene\Scenes\SceneList.h" />
     <ClInclude Include="SourceCode\Scene\Scenes\Title\Title.h" />
-    <ClInclude Include="SourceCode\Utility\XInput\XInput.h" />
-    <ClInclude Include="SourceCode\Utility\XInput\XinputConfig.h" />
+    <ClInclude Include="SourceCode\Utility\Input\XInput\XInput.h" />
+    <ClInclude Include="SourceCode\Utility\Input\XInput\XinputConfig.h" />
     <ClInclude Include="SourceCode\XAudio2\OggLoad\OggLoad.h" />
     <ClInclude Include="SourceCode\XAudio2\SoundManager.h" />
     <ClInclude Include="SourceCode\XAudio2\XAudio2.h" />
