--- a/Hullien/Hullien/Hullien.vcxproj.filters
+++ b/Hullien/Hullien/Hullien.vcxproj.filters
@@ -191,6 +191,7 @@
     <ClCompile Include="SourceCode\Common\Gage\CircleGage.cpp" />
     <ClCompile Include="SourceCode\GameObject\Widget\Cursor\ConfigCursor.cpp" />
     <ClCompile Include="SourceCode\Common\Sprite\BlendSprite\BlendSprite.cpp" />
+    <ClCompile Include="SourceCode\GameObject\Widget\SceneTransition\SceneTransition.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\ImGui\imconfig.h" />
@@ -390,6 +391,7 @@
     <ClInclude Include="SourceCode\GameObject\Widget\Cursor\ConfigCursor.h" />
     <ClInclude Include="SourceCode\Common\Sprite\BlendSprite\BlendSprite.h" />
     <ClInclude Include="SourceCode\Common\Sprite\SpriteState.h" />
+    <ClInclude Include="SourceCode\GameObject\Widget\SceneTransition\SceneTransition.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
