--- a/Hullien/Hullien/imgui.ini
+++ b/Hullien/Hullien/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
-Pos=164,80
+Pos=14,586
 Size=828,671
-Collapsed=0
+Collapsed=1
 
 [Window][ControllerEdit]
 Pos=10,20
@@ -29,7 +29,7 @@ Size=510,650
 Collapsed=0
 
 [Window][プレイヤーの設定]
-Pos=840,0
+Pos=840,-43
 Size=440,470
 Collapsed=0
 
