--- a/Hullien/Hullien/Hullien.vcxproj
+++ b/Hullien/Hullien/Hullien.vcxproj
@@ -244,6 +244,7 @@
     <ClCompile Include="SourceCode\GameObject\STG\STGActor.cpp" />
     <ClCompile Include="SourceCode\GameObject\STG\STGManager\STGManager.cpp" />
     <ClCompile Include="SourceCode\GameObject\UFOLight\UFOLight.cpp" />
+    <ClCompile Include="SourceCode\GameObject\Widget\ButtonExplanation\ButtonExplanation.cpp" />
     <ClCompile Include="SourceCode\GameObject\Widget\Cursor\ConfigCursor.cpp" />
     <ClCompile Include="SourceCode\GameObject\Widget\Cursor\Cursor.cpp" />
     <ClCompile Include="SourceCode\GameObject\Widget\EventWidget\EventWidget.cpp" />
@@ -339,6 +340,7 @@
     <ClInclude Include="SourceCode\GameObject\Actor\Item\EditItem\EditItem.h" />
     <ClInclude Include="SourceCode\GameObject\STG\Bullet\BuletManager\BuletManager.h" />
     <ClInclude Include="SourceCode\GameObject\STG\Bullet\BuletManager\BulletManagerParam.h" />
+    <ClInclude Include="SourceCode\GameObject\Widget\ButtonExplanation\ButtonExplanation.h" />
     <ClInclude Include="SourceCode\GameObject\Widget\Cursor\ConfigCursor.h" />
     <ClInclude Include="SourceCode\GameObject\Widget\SceneTransition\SceneTransition.h" />
     <ClInclude Include="SourceCode\GameObject\Widget\SceneWidget\ConfigWidget\ControllerConfigWidget\ControllerConfigWidget.h" />
