--- a/Hullien/Hullien/Hullien.vcxproj.filters
+++ b/Hullien/Hullien/Hullien.vcxproj.filters
@@ -196,6 +196,7 @@
     <ClCompile Include="SourceCode\GameObject\Widget\SceneTransition\SceneTransition.cpp" />
     <ClCompile Include="SourceCode\Common\Blur\Blur.cpp" />
     <ClCompile Include="SourceCode\Common\InvisibleWall\InvisibleWallShader.cpp" />
+    <ClCompile Include="SourceCode\GameObject\Widget\ButtonExplanation\ButtonExplanation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\ImGui\imconfig.h" />
@@ -398,6 +399,7 @@
     <ClInclude Include="SourceCode\GameObject\Widget\SceneTransition\SceneTransition.h" />
     <ClInclude Include="SourceCode\Common\Blur\Blur.h" />
     <ClInclude Include="SourceCode\Common\InvisibleWall\InvisibleWallShader.h" />
+    <ClInclude Include="SourceCode\GameObject\Widget\ButtonExplanation\ButtonExplanation.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
