--- a/Hullien/Hullien/Hullien.vcxproj
+++ b/Hullien/Hullien/Hullien.vcxproj
@@ -273,6 +273,7 @@
     <ClCompile Include="SourceCode\GameObject\Widget\SceneWidget\TItleWidget\TitleWidget.cpp" />
     <ClCompile Include="SourceCode\GameObject\Widget\Slider\Slider.cpp" />
     <ClCompile Include="SourceCode\GameObject\Widget\Switch\Switch.cpp" />
+    <ClCompile Include="SourceCode\GameObject\Widget\Tutorial\Tutorial.cpp" />
     <ClCompile Include="SourceCode\GameObject\Widget\Widget.cpp" />
     <ClCompile Include="SourceCode\Light\LightBase.cpp" />
     <ClCompile Include="SourceCode\Light\LightManager\LightManager.cpp" />
@@ -347,6 +348,7 @@
     <ClInclude Include="SourceCode\GameObject\Widget\SceneWidget\ConfigWidget\GraphicConfigWidget\GraphicConfigWidget.h" />
     <ClInclude Include="SourceCode\GameObject\Widget\SceneWidget\GameWidget\CharacterWidget\BackGauge\BackGauge.h" />
     <ClInclude Include="SourceCode\GameObject\Widget\Switch\Switch.h" />
+    <ClInclude Include="SourceCode\GameObject\Widget\Tutorial\Tutorial.h" />
     <ClInclude Include="SourceCode\Main\Resource\resource.h" />
     <ClInclude Include="SourceCode\Camera\Camera.h" />
     <ClInclude Include="SourceCode\Camera\CameraManager\CameraManager.h" />
